@@ -3665,75 +3665,75 @@ static int DoSendDlgMessage (lua_State *L, intptr_t Msg, int delta)
 	return 1;
 }
 
-#define DlgMethod(name,msg,delta) \
-static int dlg_##name(lua_State *L) { return DoSendDlgMessage(L,msg,delta); }
+#define DlgMethod(name,msg) \
+static int dlg_##name(lua_State *L) { return DoSendDlgMessage(L,msg,1); }
 
 static int far_SendDlgMessage(lua_State *L) { return DoSendDlgMessage(L,0,0); }
 
-DlgMethod( AddHistory,             DM_ADDHISTORY, 1)
-DlgMethod( Close,                  DM_CLOSE, 1)
-DlgMethod( EditUnchangedFlag,      DM_EDITUNCHANGEDFLAG, 1)
-DlgMethod( Enable,                 DM_ENABLE, 1)
-DlgMethod( EnableRedraw,           DM_ENABLEREDRAW, 1)
-DlgMethod( GetCheck,               DM_GETCHECK, 1)
-DlgMethod( GetComboboxEvent,       DM_GETCOMBOBOXEVENT, 1)
-DlgMethod( GetConstTextPtr,        DM_GETCONSTTEXTPTR, 1)
-DlgMethod( GetCursorPos,           DM_GETCURSORPOS, 1)
-DlgMethod( GetCursorSize,          DM_GETCURSORSIZE, 1)
-DlgMethod( GetDialogInfo,          DM_GETDIALOGINFO, 1)
-DlgMethod( GetDialogTitle,         DM_GETDIALOGTITLE, 1)
-DlgMethod( GetDlgData,             DM_GETDLGDATA, 1)
-DlgMethod( GetDlgItem,             DM_GETDLGITEM, 1)
-DlgMethod( GetDlgRect,             DM_GETDLGRECT, 1)
-DlgMethod( GetDropdownOpened,      DM_GETDROPDOWNOPENED, 1)
-DlgMethod( GetEditPosition,        DM_GETEDITPOSITION, 1)
-DlgMethod( GetFocus,               DM_GETFOCUS, 1)
-DlgMethod( GetItemData,            DM_GETITEMDATA, 1)
-DlgMethod( GetItemPosition,        DM_GETITEMPOSITION, 1)
-DlgMethod( GetSelection,           DM_GETSELECTION, 1)
-DlgMethod( GetText,                DM_GETTEXT, 1)
-DlgMethod( Key,                    DM_KEY, 1)
-DlgMethod( ListAdd,                DM_LISTADD, 1)
-DlgMethod( ListAddStr,             DM_LISTADDSTR, 1)
-DlgMethod( ListDelete,             DM_LISTDELETE, 1)
-DlgMethod( ListFindString,         DM_LISTFINDSTRING, 1)
-DlgMethod( ListGetCurPos,          DM_LISTGETCURPOS, 1)
-DlgMethod( ListGetData,            DM_LISTGETDATA, 1)
-DlgMethod( ListGetDataSize,        DM_LISTGETDATASIZE, 1)
-DlgMethod( ListGetItem,            DM_LISTGETITEM, 1)
-DlgMethod( ListGetTitles,          DM_LISTGETTITLES, 1)
-DlgMethod( ListInfo,               DM_LISTINFO, 1)
-DlgMethod( ListInsert,             DM_LISTINSERT, 1)
-DlgMethod( ListSet,                DM_LISTSET, 1)
-DlgMethod( ListSetCurPos,          DM_LISTSETCURPOS, 1)
-DlgMethod( ListSetData,            DM_LISTSETDATA, 1)
-DlgMethod( ListSetTitles,          DM_LISTSETTITLES, 1)
-DlgMethod( ListSort,               DM_LISTSORT, 1)
-DlgMethod( ListUpdate,             DM_LISTUPDATE, 1)
-DlgMethod( MoveDialog,             DM_MOVEDIALOG, 1)
-DlgMethod( Redraw,                 DM_REDRAW, 1)
-DlgMethod( ResizeDialog,           DM_RESIZEDIALOG, 1)
-DlgMethod( Set3State,              DM_SET3STATE, 1)
-DlgMethod( SetCheck,               DM_SETCHECK, 1)
-DlgMethod( SetComboboxEvent,       DM_SETCOMBOBOXEVENT, 1)
-DlgMethod( SetCursorPos,           DM_SETCURSORPOS, 1)
-DlgMethod( SetCursorSize,          DM_SETCURSORSIZE, 1)
-DlgMethod( SetDlgData,             DM_SETDLGDATA, 1)
-DlgMethod( SetDlgItem,             DM_SETDLGITEM, 1)
-DlgMethod( SetDropdownOpened,      DM_SETDROPDOWNOPENED, 1)
-DlgMethod( SetEditPosition,        DM_SETEDITPOSITION, 1)
-DlgMethod( SetFocus,               DM_SETFOCUS, 1)
-DlgMethod( SetHistory,             DM_SETHISTORY, 1)
-DlgMethod( SetInputNotify,         DM_SETINPUTNOTIFY, 1)
-DlgMethod( SetItemData,            DM_SETITEMDATA, 1)
-DlgMethod( SetItemPosition,        DM_SETITEMPOSITION, 1)
-DlgMethod( SetMaxTextLength,       DM_SETMAXTEXTLENGTH, 1)
-DlgMethod( SetSelection,           DM_SETSELECTION, 1)
-DlgMethod( SetText,                DM_SETTEXT, 1)
-DlgMethod( SetTextPtr,             DM_SETTEXTPTR, 1)
-DlgMethod( ShowDialog,             DM_SHOWDIALOG, 1)
-DlgMethod( ShowItem,               DM_SHOWITEM, 1)
-DlgMethod( User,                   DM_USER, 1)
+DlgMethod( AddHistory,             DM_ADDHISTORY)
+DlgMethod( Close,                  DM_CLOSE)
+DlgMethod( EditUnchangedFlag,      DM_EDITUNCHANGEDFLAG)
+DlgMethod( Enable,                 DM_ENABLE)
+DlgMethod( EnableRedraw,           DM_ENABLEREDRAW)
+DlgMethod( GetCheck,               DM_GETCHECK)
+DlgMethod( GetComboboxEvent,       DM_GETCOMBOBOXEVENT)
+DlgMethod( GetConstTextPtr,        DM_GETCONSTTEXTPTR)
+DlgMethod( GetCursorPos,           DM_GETCURSORPOS)
+DlgMethod( GetCursorSize,          DM_GETCURSORSIZE)
+DlgMethod( GetDialogInfo,          DM_GETDIALOGINFO)
+DlgMethod( GetDialogTitle,         DM_GETDIALOGTITLE)
+DlgMethod( GetDlgData,             DM_GETDLGDATA)
+DlgMethod( GetDlgItem,             DM_GETDLGITEM)
+DlgMethod( GetDlgRect,             DM_GETDLGRECT)
+DlgMethod( GetDropdownOpened,      DM_GETDROPDOWNOPENED)
+DlgMethod( GetEditPosition,        DM_GETEDITPOSITION)
+DlgMethod( GetFocus,               DM_GETFOCUS)
+DlgMethod( GetItemData,            DM_GETITEMDATA)
+DlgMethod( GetItemPosition,        DM_GETITEMPOSITION)
+DlgMethod( GetSelection,           DM_GETSELECTION)
+DlgMethod( GetText,                DM_GETTEXT)
+DlgMethod( Key,                    DM_KEY)
+DlgMethod( ListAdd,                DM_LISTADD)
+DlgMethod( ListAddStr,             DM_LISTADDSTR)
+DlgMethod( ListDelete,             DM_LISTDELETE)
+DlgMethod( ListFindString,         DM_LISTFINDSTRING)
+DlgMethod( ListGetCurPos,          DM_LISTGETCURPOS)
+DlgMethod( ListGetData,            DM_LISTGETDATA)
+DlgMethod( ListGetDataSize,        DM_LISTGETDATASIZE)
+DlgMethod( ListGetItem,            DM_LISTGETITEM)
+DlgMethod( ListGetTitles,          DM_LISTGETTITLES)
+DlgMethod( ListInfo,               DM_LISTINFO)
+DlgMethod( ListInsert,             DM_LISTINSERT)
+DlgMethod( ListSet,                DM_LISTSET)
+DlgMethod( ListSetCurPos,          DM_LISTSETCURPOS)
+DlgMethod( ListSetData,            DM_LISTSETDATA)
+DlgMethod( ListSetTitles,          DM_LISTSETTITLES)
+DlgMethod( ListSort,               DM_LISTSORT)
+DlgMethod( ListUpdate,             DM_LISTUPDATE)
+DlgMethod( MoveDialog,             DM_MOVEDIALOG)
+DlgMethod( Redraw,                 DM_REDRAW)
+DlgMethod( ResizeDialog,           DM_RESIZEDIALOG)
+DlgMethod( Set3State,              DM_SET3STATE)
+DlgMethod( SetCheck,               DM_SETCHECK)
+DlgMethod( SetComboboxEvent,       DM_SETCOMBOBOXEVENT)
+DlgMethod( SetCursorPos,           DM_SETCURSORPOS)
+DlgMethod( SetCursorSize,          DM_SETCURSORSIZE)
+DlgMethod( SetDlgData,             DM_SETDLGDATA)
+DlgMethod( SetDlgItem,             DM_SETDLGITEM)
+DlgMethod( SetDropdownOpened,      DM_SETDROPDOWNOPENED)
+DlgMethod( SetEditPosition,        DM_SETEDITPOSITION)
+DlgMethod( SetFocus,               DM_SETFOCUS)
+DlgMethod( SetHistory,             DM_SETHISTORY)
+DlgMethod( SetInputNotify,         DM_SETINPUTNOTIFY)
+DlgMethod( SetItemData,            DM_SETITEMDATA)
+DlgMethod( SetItemPosition,        DM_SETITEMPOSITION)
+DlgMethod( SetMaxTextLength,       DM_SETMAXTEXTLENGTH)
+DlgMethod( SetSelection,           DM_SETSELECTION)
+DlgMethod( SetText,                DM_SETTEXT)
+DlgMethod( SetTextPtr,             DM_SETTEXTPTR)
+DlgMethod( ShowDialog,             DM_SHOWDIALOG)
+DlgMethod( ShowItem,               DM_SHOWITEM)
+DlgMethod( User,                   DM_USER)
 
 int PushDNParams (lua_State *L, intptr_t Msg, intptr_t Param1, void *Param2)
 {
@@ -5044,31 +5044,31 @@ static int DoAdvControl (lua_State *L, int Command, int Delta)
 	return 1;
 }
 
-#define AdvCommand(name,command,delta) \
-static int adv_##name(lua_State *L) { return DoAdvControl(L,command,delta); }
+#define AdvCommand(name,command) \
+static int adv_##name(lua_State *L) { return DoAdvControl(L,command,1); }
 
 static int far_AdvControl(lua_State *L) { return DoAdvControl(L,0,0); }
 
-AdvCommand( Commit,                 ACTL_COMMIT, 1)
-AdvCommand( GetArrayColor,          ACTL_GETARRAYCOLOR, 1)
-AdvCommand( GetColor,               ACTL_GETCOLOR, 1)
-AdvCommand( GetCursorPos,           ACTL_GETCURSORPOS, 1)
-AdvCommand( GetFarHwnd,             ACTL_GETFARHWND, 1)
-AdvCommand( GetFarmanagerVersion,   ACTL_GETFARMANAGERVERSION, 1)
-AdvCommand( GetFarRect,             ACTL_GETFARRECT, 1)
-AdvCommand( GetWindowCount,         ACTL_GETWINDOWCOUNT, 1)
-AdvCommand( GetWindowInfo,          ACTL_GETWINDOWINFO, 1)
-AdvCommand( GetWindowType,          ACTL_GETWINDOWTYPE, 1)
-AdvCommand( ProgressNotify,         ACTL_PROGRESSNOTIFY, 1)
-AdvCommand( Quit,                   ACTL_QUIT, 1)
-AdvCommand( RedrawAll,              ACTL_REDRAWALL, 1)
-AdvCommand( SetArrayColor,          ACTL_SETARRAYCOLOR, 1)
-AdvCommand( SetCurrentWindow,       ACTL_SETCURRENTWINDOW, 1)
-AdvCommand( SetCursorPos,           ACTL_SETCURSORPOS, 1)
-AdvCommand( SetProgressState,       ACTL_SETPROGRESSSTATE, 1)
-AdvCommand( SetProgressValue,       ACTL_SETPROGRESSVALUE, 1)
-AdvCommand( Synchro,                ACTL_SYNCHRO, 1)
-AdvCommand( Waitkey,                ACTL_WAITKEY, 1)
+AdvCommand( Commit,                 ACTL_COMMIT)
+AdvCommand( GetArrayColor,          ACTL_GETARRAYCOLOR)
+AdvCommand( GetColor,               ACTL_GETCOLOR)
+AdvCommand( GetCursorPos,           ACTL_GETCURSORPOS)
+AdvCommand( GetFarHwnd,             ACTL_GETFARHWND)
+AdvCommand( GetFarmanagerVersion,   ACTL_GETFARMANAGERVERSION)
+AdvCommand( GetFarRect,             ACTL_GETFARRECT)
+AdvCommand( GetWindowCount,         ACTL_GETWINDOWCOUNT)
+AdvCommand( GetWindowInfo,          ACTL_GETWINDOWINFO)
+AdvCommand( GetWindowType,          ACTL_GETWINDOWTYPE)
+AdvCommand( ProgressNotify,         ACTL_PROGRESSNOTIFY)
+AdvCommand( Quit,                   ACTL_QUIT)
+AdvCommand( RedrawAll,              ACTL_REDRAWALL)
+AdvCommand( SetArrayColor,          ACTL_SETARRAYCOLOR)
+AdvCommand( SetCurrentWindow,       ACTL_SETCURRENTWINDOW)
+AdvCommand( SetCursorPos,           ACTL_SETCURSORPOS)
+AdvCommand( SetProgressState,       ACTL_SETPROGRESSSTATE)
+AdvCommand( SetProgressValue,       ACTL_SETPROGRESSVALUE)
+AdvCommand( Synchro,                ACTL_SYNCHRO)
+AdvCommand( Waitkey,                ACTL_WAITKEY)
 
 static int far_MacroLoadAll(lua_State* L)
 {
